# bom-helper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yml  python-publish.yml
src/bom_helper/: __init__.py  cli.py  kicad.py  main.py
tests/: test_lcsc.py  test_parsing.py  test_validation.py
