[project]
name = "bom-helper"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Kilner", email = "chris@rhiza.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "easyeda2kicad>=0.8.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
bom = "bom_helper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]
