[project]
name = "bom-helper"
version = "0.1.1"
description = "CLI tool for fetching LCSC component info, datasheets, and KiCad library exports"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Chris Kilner", email = "chris@rhiza.fr" }
]
keywords = ["lcsc", "bom", "kicad", "electronics", "components", "easyeda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "easyeda2kicad>=0.8.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.urls]
Repository = "https://github.com/rhiza-fr/bom-helper"
Issues = "https://github.com/rhiza-fr/bom-helper/issues"

[project.scripts]
bom = "bom_helper.cli:app"

[tool.pytest.ini_options]
markers = [
    "network: marks tests that make real network requests (deselect with '-m \"not network\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]
